# zkp-pwd

./: .gitignore  .prettierignore  Cargo.toml  craco.config.ts  package.json
lib/core/: Cargo.toml
lib/core/src/: lib.rs
lib/frontend/: Cargo.toml
lib/frontend/src/: fe-lib.rs
lib/peggy/: Cargo.toml
lib/victor/: Cargo.toml
lib/victor/src/: lib.rs
peggy/src/: lib.rs
server/: Cargo.toml
server/src/: client_data.rs  database.rs  main.rs  router.rs  web_utils.rs
server/src/router/: authenticated.rs  handshake.rs  healthcheck.rs  pick_choice.rs  public_key.rs  verify.rs
src/: App.css  App.tsx  Authenticate.tsx  Password.tsx
